--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.5",
+    "prettier": "^1.14.2",
     "sass-loader": "^6.0.7",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.2",
